Moved deck into Dealer class