@@ -4,13 +4,9 @@ import static Objects.Enums.TextColors.RED;
 
 public class DealerHand extends Hand {
 
-    public DealerHand(Deck deck) {
-        super(deck);
-    }
-
     @Override
     public void showHand() {
-        showText("Dealer Shows " + cards.get(0).getFormattedCardName(), RED);
+        showText("Dealer Shows " + cards.getFirst().getFormattedCardName(), RED);
         pressAnyKey();
     }
 
@@ -29,20 +25,6 @@ public class DealerHand extends Hand {
         else if (score < 21) showText("Dealer has " + score, RED);
         else if (score == 21) showText("Dealer has 21!", RED);
         else showText("An error in scoring has occurred.");
-        pressAnyKey();
-    }
-
-
-    @Override
-    protected void hit() {
-        showText("Dealer hits.", RED);
-        cards.add(deck.pullNextCard());
-        calculateScore();
-    }
-
-    @Override
-    protected void stand() {
-        showText("Dealer has stood with " + getScore(), RED);
         pressAnyKey();
     }
 
